--- a/GUNLUK/AnaSayfa.Master
+++ b/GUNLUK/AnaSayfa.Master
@@ -12,17 +12,39 @@
 </head>
 <body>
     <form id="form1" runat="server">
-        <!--sayfası iki sütuna ayırdık.-->
-        <div id="sol"> 
-            SOL
-        </div>
+        
+        <div id="ana" >
 
-        <div id="sag">
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+            <!--sayfası iki sütuna ayırdık.-->
+            <div id="sol"> 
+            <div>
+                <img id="vesikaresim" src="/image/sr.jpg" />
+            </div>
+            <div id="kategori">
+                <asp:DataList ID="DataList1" runat="server" Width="100%">
+                    <ItemTemplate>
+                        <asp:HyperLink ID="HyperLink1" runat="server" NavigateUrl='<%# "~/yazilar.aspx?kategori_id="+Eval("KATEGORI_REFNO") %>' Text='<%# Eval("KATEGORI_ADI") %>'></asp:HyperLink><!--Kategorileri sayafaya link olarak getirir.--->
+                    </ItemTemplate>
+                </asp:DataList>
+            </div>
+
+            <div id="encokokunan">
+                <asp:DataList ID="DataList2" runat="server" Width="100%">
+                    <ItemTemplate>
+                        <asp:HyperLink ID="HyperLink2" runat="server" Text='<%# Eval("BASLIK") %>' NavigateUrl='<%# "~/yazidetay.aspx?yazi_refno="+Eval("YAZI_REFNO") %>'></asp:HyperLink>
+                    </ItemTemplate>
+                </asp:DataList>
+            </div>
+            </div>
+
+            <div id="sag">
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                 
-            </asp:ContentPlaceHolder>
+                </asp:ContentPlaceHolder>
+            </div>
+            <div id="footer">deneme</div>
+
         </div>
-        <div id="footer">deneme</div>
     </form>
 </body>
 </html>
