--- a/GUNLUK/StyleSheet1.css
+++ b/GUNLUK/StyleSheet1.css
@@ -1,6 +1,11 @@
 ﻿body {
 }
 
+*{
+    padding:0px;
+    margin:0px;
+    list-style-type:none;
+}
 #sol{
     width: 200px;
     min-height:800px;
@@ -11,7 +16,8 @@
 #sag {
     width: 800px;
     min-height: 800px;
-    background-color:deepskyblue;
+    background-color: deepskyblue;
+    float: left;
 }
 
 #footer{
@@ -21,4 +27,21 @@
     font-size:20px;
     width:1000px;
     clear:both;
+}
+
+#vesikaresim{
+    height:200px;
+    width:200px;
+    border-radius:100px;
+}
+#ana{
+    margin:auto;
+}
+
+.resimyuvarla{
+    border-radius:30px;
+}
+
+.sonyazilar{
+    margin: 30px;
 }
